fix(FEV-1198): A redundant scrollbar is displayed on the submission page (#18)
* fix(FEV-1198): remove scrollbars + small style fixes for questions

* fix(FEV-1198): dynamic scrollbars (on hover)

* fix(FEV-1198): dynamic scrollbars (on hover) for question-container

--- a/src/components/quiz-question/multi-choice/multi-choice.scss
+++ b/src/components/quiz-question/multi-choice/multi-choice.scss
@@ -7,22 +7,27 @@
   width: 100%;
   max-height: 100%;
   .questionText {
-    flex-shrink: 0;
-    font-weight: bold;
     @include ivq-text;
+    flex-shrink: 0;
+    overflow-wrap: break-word;
+    font-weight: bold;
     overflow: initial;
   }
 
   .optionalAnswersWrapper {
     display: flex;
     flex-direction: row;
-    overflow: auto;
+    overflow: hidden;
     margin-top: 16px;
-    @include without-scrollbar;
+    @include ivq-scrollbar;
+    &:hover {
+      overflow: auto;
+    }
 
     .optionalAnswersContainer {
       display: flex;
       flex-direction: column;
+      max-width: 100%;
       .multiSelectAnswer {
         @include optional-answer;
         height: auto;
@@ -64,6 +69,7 @@
         .questionContent {
           flex-grow: 1;
           padding: 5px 16px 5px 8px;
+          min-width: fit-content;
         }
       }
     }
