--- a/src/components/quiz-question/open-question/open-question.scss
+++ b/src/components/quiz-question/open-question/open-question.scss
@@ -7,9 +7,10 @@
   width: 100%;
   max-height: 100%;
   .questionText {
-    flex-shrink: 0;
     @include ivq-text;
     font-weight: bold;
+    flex-shrink: 0;
+    overflow-wrap: break-word;
   }
   .textAreaWrapper {
     position: relative;
@@ -34,10 +35,10 @@
       line-height: 18px;
     }
     .charCounter {
-      position: absolute;
-      right: 0;
-      bottom: -24px;
       @include ivq-text;
+      position: relative;
+      text-align: right;
+      margin-top: 4px;
       font-size: 14px;
     }
     ::selection {
