--- a/src/components/quiz-review/question-review/question-review.scss
+++ b/src/components/quiz-review/question-review/question-review.scss
@@ -36,13 +36,21 @@
     height: 100%;
     overflow: hidden;
     text-align: left;
+    @include ivq-scrollbar;
+    &:hover {
+      overflow: auto;
+    }
+
     .questionText {
       @include ivq-text;
+      flex-shrink: 0;
+      overflow-wrap: break-word;
       font-weight: bold;
       margin-bottom: 4px;
     }
     .correctAnswerIs {
       @include ivq-text;
+      flex-shrink: 0;
       font-size: 16px;
       line-height: 21px;
       margin-bottom: 10px;
@@ -51,6 +59,8 @@
     .yourAnswer,
     .openQuestionAnswer {
       @include ivq-text;
+      flex-shrink: 0;
+      overflow-wrap: break-word;
       font-size: 14px;
       line-height: 18px;
     }
@@ -84,8 +94,12 @@
     .multiAnswersWrapper {
       display: flex;
       flex-direction: row;
-      overflow: auto;
+      overflow: hidden;
       margin-top: 4px;
+      @include ivq-scrollbar;
+      &:hover {
+        overflow: auto;
+      }
 
       .multiAnswersContainer {
         display: flex;
@@ -119,9 +133,10 @@
             background-clip: padding-box;
           }
           .questionContent {
+            min-width: 36px;
             height: 100%;
             flex-grow: 1;
-            flex-shrink: 0;
+            flex-shrink: 1;
             padding: 5px 16px 5px 8px;
             overflow: hidden;
             white-space: nowrap;
